
- Added CCR extension support to Health register entry.

- Added epub accessors to Books API.

- Added block callback support to GDataHTTPFetcher

- Added sentData callback support to GDataHTTPFetcher on Snow Leopard and
  iPhone 3.0

- Added GDataAuthenticationFetcher, which can be used to create a fetcher
  for Google ClientLogin authentication, depending only on GDataHTTPFetcher.

- Added YouTube convenience accessor mediaContentWithFormatNumber:

Changes

- Batch fetches now always disable shouldIgnoreUnknownXML so that the results
  in the batch feed can be used for updates.

- The shouldIgnoreXML flag is now settable in individual tickets.

- Made object properties dictionaries more KVO-compliant (thanks mtonkin)

- GDataHTTPFetcher dated data cache now is bounded in size (by default, 15 MB
  for Mac, 1 MB for iPhones) making it suitable for use on iPhones

- GDataHTTPFetcher now takes a GDataFetchHistory class rather than a mutable
  dictionary as the optional fetch history

- Renamed analyticsProperties to avoid conflict with properties of the
  GDataObject base class.

Bugs Fixed

- Setting the name of a Google Base attribute also now sets the XML element
  local name.

- Fixed the atomPub URI when creating new objects with code protocol v2.


Release 1.8.0
24-July-2009
Changes since 1.7.0

Additions

- Added support for Google Analytics API

- Added support for Google Maps Data API

- Added classes for Blogger Data API

- Added support for Spreadsheets API version 3 with table and record feeds

- Added support for Contacts API version 3

- Added new classes for Webmaster Tools API

- Added Geo accessor to Calendar API event entries

- Added Calendar settings feed

- Added YouTube CaptionTrack feed

- Added Health example app

- Added batch call to Docs API

- Added "next" link and category accessors to Health profile entries

- Added album creation to photos sample app

- Added removeChild method to GDataXMLElement
